Fix header layout after window's width has been resized down to <1285px
Bootstrap CSS sets negative margins to navbar rows, so in case we are
using more than one, successive rows are pushed to avoid overlapping.

Fuel web interface has only one navbar row, so the document layout
becomes broken when it pushes window margin beyond the viewport.

This commit cancels out negative margin-right if the navbar row is the
last child of its parent. It works in FF 3.5+, IE9+, Chrome 4+ and
Safari 4+. Bug will be still observable in older browsers without
:last-child CSS3 selector support with no other regressions caused by
this change.

Closes-Bug: 1519375

--- a/nailgun/static/styles/main.less
+++ b/nailgun/static/styles/main.less
@@ -677,6 +677,12 @@ input[type=range] {
   }
 }
 
+nav .row:last-child {
+  /* Do not break the flow for block elements, following
+   * the only navbar row. */
+  margin-right: 0;
+}
+
 .navbar-logo {
   float: left;
   height: 60px;
